--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <h5 class="text-center">Our Story</h5>
           <h2 class="text-center">A match made in Boulder</h2>
           <p class="large text-center">
-            Gia & Michael first started spending time together in the summer of 2018. Things started off a little slow, with Michael running off to South Korea immediately following their second date. He returned eventually toting some gifts for his new hunny, and the mention that he had sent a postcard. Gia began to wonder if she could trust this would-be suitor as one month went by, then two months with no postcard in sight. Finally three months later, a card postmarked from Korea appeared in Gia's mailbox and they have been happily inseparable since.
+            Gia & Michael first started spending time together in the summer of 2018. Things started off a little slow, with Michael running off to South Korea immediately following their second date. He returned eventually toting some gifts for his new hunny, and the mention that he had sent her a postcard. Gia began to wonder if she could trust this would-be suitor, as one month went by, then two, with no postcard in sight. Finally three months later, a card postmarked from Korea appeared in Gia's mailbox and they have been happily inseparable since.
           </p>
         </div>
       </div>
@@ -461,7 +461,7 @@
           <h5 class="text-center">Join Us in Colorado</h5>
           <h2 class="text-center">Wedding & Reception</h2>
           <p class="large text-center">
-            We will marry at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin at 4pm followed by cocktails, dinner, and dancing. Following the reception, join us on Pearl Street in beautiful Boulder for some after party antics.
+            We're getting married at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin between 4 and 5 (exact time coming soon) followed by cocktails, dinner, and dancing. Be sure to don your party pants (and maybe ask if the babysitter can stay late) as we are hoping some of you will join us for some downtown Boulder after party antics on the Pearl St Mall. 
           </p>
         </div>
       </div>
@@ -649,7 +649,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">Catch up with old friends and meet new ones at Rayback Collective, a sprawling, kid-friendly, outdoor cocktail and beer garden with several food truck options. We will be holding court all evening, so stop by whenever. Parking can be challenging at this popular Boulder elstablishment, your best bet may be to park <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/ADYxDL3CDoBwEExz9">here</a> on Glenwood and walk south on the bike path.</p>
+                  <p class="sans">Come say hello and share your best pre-marital advice on us on our wedding eve at Rayback Collective, a sprawling, kid-friendly, outdoor cocktail and beer garden with several food truck options. We will be holding court all evening, stop by whenever. Parking can be challenging at this popular Boulder establishment, so we encourage you to either take an Uber or to park <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/ADYxDL3CDoBwEExz9">here</a> on Glenwood and walk south on the bike path.</p>
                 </div>
               </div>
             </div>
@@ -717,7 +717,7 @@
                   <h6>Time</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>4pm</p>
+                  <p>TBD</p>
                 </div>
               </div>
             </div>
@@ -737,7 +737,7 @@
                   <h6>Parking</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>Hygiene Elementary School<br>11968 N 75th St<br>Longmont, CO 80503</p>
+                  <p>More information coming soon!l<br>11968 N 75th St<br>Longmont, CO 80503</p>
                   <a class="button-map" target="_blank" href="https://goo.gl/maps/iDkcb3M1LfM1P66x9">Map</a>
                 </div>
               </div>
@@ -748,7 +748,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">The main event. Get gussied up (casual attire) and join us at the orchard. The ceremony will being around 4pm followed by cocktails, dinner, and dancing. Park at the elementary school, a short ride from the venue. Shuttles will be provided before, during, and after the event.</p>
+                  <p class="sans">The main event. Get gussied up (casual attire) and join us at the orchard. The ceremony and festivities afterwards will all take place at the farm. Parking is very limited at the venue so we will be sharing information about a satellite parking area where we'll provide shuttles to the venue. We'll be sure to have several departure times so those who might need to duck out earlier are able.</p>
                 </div>
               </div>
             </div>
