--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">Come say hello and share your best pre-marital advice on us on our wedding eve at Rayback Collective, a sprawling, kid-friendly, outdoor cocktail and beer garden with several food truck options. We will be holding court all evening, stop by whenever. Parking can be challenging at this popular Boulder establishment, so we encourage you to either take an Uber or to park <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/ADYxDL3CDoBwEExz9">here</a> on Glenwood and walk south on the bike path.</p>
+                  <p class="sans">Come say hello and share your best pre-marital advice with us on our wedding eve at Rayback Collective, a sprawling, kid-friendly, outdoor cocktail and beer garden with several food truck options. We will be holding court all evening, stop by whenever. Parking can be challenging at this popular Boulder establishment, so we encourage you to either take an Uber or to park <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/ADYxDL3CDoBwEExz9">here</a> on Glenwood and walk south on the bike path.</p>
                 </div>
               </div>
             </div>
@@ -737,7 +737,7 @@
                   <h6>Parking</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>More information coming soon!l<br>11968 N 75th St<br>Longmont, CO 80503</p>
+                  <p>More information coming soon!<br>11968 N 75th St<br>Longmont, CO 80503</p>
                   <a class="button-map" target="_blank" href="https://goo.gl/maps/iDkcb3M1LfM1P66x9">Map</a>
                 </div>
               </div>
@@ -787,7 +787,7 @@
                   <h6>Time</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>11am</p>
+                  <p>TBD</p>
                 </div>
               </div>
             </div>
@@ -797,7 +797,7 @@
                   <h6>Where</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>Chautauqua Park<br>Baseline Road& 9th Street<br>Boulder, CO 80302</p>
+                  <p>TBD<br>Baseline Road& 9th Street<br>Boulder, CO 80302</p>
                   <a class="button-map" target="_blank" href="https://goo.gl/maps/dVtiMQmyFu9fkxHF6">Map</a>
                 </div>
               </div>
@@ -808,7 +808,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">Wind down the weekend with the bride and groom at the beautiful Chautauqua Park for brunch on Sunday morning. After breakfast, take advantage of the crown jewel of Boulder with a hike in the Flatirons.</p>
+                  <p class="sans">Wind down the weekend with the bride and groom over brunch on Sunday morning. Time and Place coming soon.</p>
                 </div>
               </div>
             </div>
@@ -923,7 +923,7 @@
               <div class="row">
                 <div class="col-3" style="text-align: center;"></div>
                 <div class="col-6" style="text-align: center;">
-                  <p>Stay in Southwest Longmont at one of our reserved room blocks, conveniently located  15 minutes from Boulder, 10 minutes to the wedding venue, and 5 minutes from downtown Longmont. If you need some help booking lodging, <a style="color: #FF5734" href="mailto:michaelpburt@gmail.com,giaupchurch@gmail.com?subject=Help!" target="_blank">please reach out to us</a>!</p>
+                  <p>It is a lovely time of year in Boulder and so we encourage everyone to make lodging arrangements as soon as you're able. We've reserved some rooms blocks in southwest Longmont, conveniently located 15 minutes from Boulder, 10 minutes to the wedding venue, and 5 minutes from downtown Longmont. If you need some help booking lodging, <a style="color: #FF5734" href="mailto:michaelpburt@gmail.com,giaupchurch@gmail.com?subject=Help!" target="_blank">please reach out to us</a>!</p>
                 </div>
                 <div class="col-3" style="text-align: center;"></div>
               </div>
@@ -1015,7 +1015,7 @@
           <h4>Drink</h4>
           <ul>
             <li>
-              <a href="https://www.jungletiki.com/">Jungle <span class="price">$$$</span></a>
+              <a href="https://www.jungletiki.com/">Jungle <span class="price">$$</span></a>
               <p>Sassy cocktails in curious vessels</p>
             </li>
             <li>
@@ -1023,7 +1023,7 @@
               <p>Artfully crafted beers for all palates: lagers, sours, and IPAs alike</p>
             </li>
             <li>
-              <a href="https://therayback.com/">Rayback Collective <span class="price">$$$</span></a>
+              <a href="https://therayback.com/">Rayback Collective <span class="price">$$</span></a>
               <p>Sprawling outdoor cocktail and beer garden with several food truck options</p>
             </li>
             <li>
@@ -1045,11 +1045,11 @@
             </li>
             <li>
               <a href="https://www.visitcalifornia.com/attraction/5-amazing-things-do-griffith-park">Scott Carpenter Pool <span class="price"></span></a>
-              <p>Not your typical public pool; practice your deep-water soloing or hit the mega water slide</p>
+              <p>Way more than your typical public pool - practice your deep-water soloing or hit the mega water slide</p>
             </li>
             <li>
               <a href="https://www.thebroad.org/">Pearl Street Mall <span class="price"></span></a>
-              <p>Take a stroll down the Rodeo Drive of the Rockies, and poke your head in Peppercorn</p>
+              <p>Take a stroll down the Rodeo Drive of the Rockies, and poke your head in Peppercorn (a favorite of Michael's mom)</p>
             </li>
             <li>
               <a href="https://bcfm.org/boulder-saturday/">Boulder Farmers Market <span class="price"></span></a>
