--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                     <h6>Book</h6>
                   </div>
                   <div class="col col-md-10">
-                    <p><a href="mailto:reservations@themayumi.com" style="color: #FF5734">Email</a> or call (310) 313-0000 and request a room for the "Amaya Wedding".</p>
+                    <p> Call (303) 682-1166 and request a room for the "Upchurch Burt Wedding".</p>
                   </div>
                 </div>
               </div>
@@ -1027,7 +1027,7 @@
               <p>Sprawling outdoor cocktail and beer garden with several food truck options</p>
             </li>
             <li>
-              <a href="https://www.1933group.com/bigfoot-west">Jefe's (Longmont) <span class="price">$$</span></a>
+              <a href="https://jefeslongmont.com/">Jefe's (Longmont) <span class="price">$$</span></a>
               <p>Boss margs and delectable tacos</p>
             </li>
           </ul>
@@ -1044,11 +1044,11 @@
               <p>A historic public park with world-class rock climbing and miles of trails</p>
             </li>
             <li>
-              <a href="https://www.visitcalifornia.com/attraction/5-amazing-things-do-griffith-park">Scott Carpenter Pool <span class="price"></span></a>
+              <a href="https://bouldercolorado.gov/locations/scott-carpenter-pool">Scott Carpenter Pool <span class="price"></span></a>
               <p>Way more than your typical public pool - practice your deep-water soloing or hit the mega water slide</p>
             </li>
             <li>
-              <a href="https://www.thebroad.org/">Pearl Street Mall <span class="price"></span></a>
+              <a href="https://www.colorado.com/articles/pearl-street-mall-beloved-boulder-attraction">Pearl Street Mall <span class="price"></span></a>
               <p>Take a stroll down the Rodeo Drive of the Rockies, and poke your head in Peppercorn (a favorite of Michael's mom)</p>
             </li>
             <li>
@@ -1132,35 +1132,7 @@
 
         </div>
 
-        <!-- <div class="col col-md-7 col-lg-5">
-          <h2 class="text-center">RSVP</h2>
-
-          <div class="js-form" style="display: block">
-            <h5>Your name</h5>
-            <input class="js-form-name" type="text" placeholder="Full Name">
-
-            <h5>Your response</h5>
-            <div class="index-rsvp__options">
-              <div class="index-rsvp__option is-active js-rsvp-option" data-value="YES">Joyfully Accepts</div>
-              <div class="index-rsvp__option js-rsvp-option" data-value="NO">Regretfully Declines</div>
-            </div>
-
-            <div class="index-rsvp__show is-active js-rsvp-show">
-              <h5>Adults attending</h5>
-              <p>Unfortunately due to venue restrictions we cannot accommodate guests under age 10 at the reception. Please <a href="mailto:moeamaya@gmail.com" style="text-decoration: underline;">reach out</a> for babysitting support during the reception.</p>
-              <input class="js-form-attending" type="text" placeholder="List names of others attending">
-
-              <h5>Dietary Restrictions</h5>
-              <input class="js-form-diet" type="text" placeholder="List any diet restrictions">
-            </div>
-
-            <button class="index-rsvp__button" disabled style="opacity:0.3">Submit</button>
-          </div>
-
-          <div class="index-rsvp__success js-form-success" style="display: none">
-            <span>Thanks!</span><br>We've receieved your response.
-          </div>
-        </div> -->
+        
 
 
 
