--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <ul class="nav-list">
         <li><a href="#story">Our Story</a></li>
         <li><a href="#facts">Fun Facts</a></li>
-        <li><a href="#events">Events</a></li>
-        <li><a href="#wedding">Wedding</a></li>
+        <li><a href="#events">Festivities</a></li>
         <li><a href="#hotels">Hotels</a></li>
+        <li><a href="#registry">Registry</a></li>
         <li><a href="#rsvp">RSVP</a></li>
       </ul>
     </nav>
