--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           <h5 class="text-center">Join Us in Colorado</h5>
           <h2 class="text-center">Wedding & Reception</h2>
           <p class="large text-center">
-            We're getting married at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin between 4 and 5 (exact time coming soon) followed by cocktails, dinner, and dancing. Be sure to don your party pants (and maybe ask if the babysitter can stay late) as we are hoping some of you will join us for some downtown Boulder after party antics on the Pearl St Mall. 
+            We're getting married at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin between 4 and 5 (exact time coming soon) followed by cocktails, dinner, and dancing. Be sure to don your party pants (and maybe ask if the babysitter can stay late) as we are hoping some of you will join us for some downtown Boulder after party antics on the Pearl St Mall.
           </p>
         </div>
       </div>
@@ -596,7 +596,7 @@
         </div> -->
         <div class="index-event__graphic">
           <figure class="index-event__image">
-            <img src="/images/uts.jpeg" alt="Under the Sun" />
+            <img src="/images/rayback.jpg" alt="Under the Sun" />
           </figure>
         </div>
         <div class="row" style="position: relative; z-index: 1">
@@ -737,8 +737,7 @@
                   <h6>Parking</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>More information coming soon!<br>11968 N 75th St<br>Longmont, CO 80503</p>
-                  <a class="button-map" target="_blank" href="https://goo.gl/maps/iDkcb3M1LfM1P66x9">Map</a>
+                  <p>More information coming soon!</p>
                 </div>
               </div>
             </div>
@@ -748,7 +747,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">The main event. Get gussied up (casual attire) and join us at the orchard. The ceremony and festivities afterwards will all take place at the farm. Parking is very limited at the venue so we will be sharing information about a satellite parking area where we'll provide shuttles to the venue. We'll be sure to have several departure times so those who might need to duck out earlier are able.</p>
+                  <p class="sans">The main event. get gussied up (Colorado casual wedding style, that is - sundresses and cowboy boots are welcome, please leave the jorts at home this time) and join us at the orchard. The ceremony and festivities afterwards will all take place at the farm. Parking is very limited at the venue so we will be sharing information about a satellite parking area where we'll provide shuttles to the venue. We'll be sure to have several departure times so those who might need to duck out earlier are able.</p>
                 </div>
               </div>
             </div>
@@ -797,8 +796,8 @@
                   <h6>Where</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>TBD<br>Baseline Road& 9th Street<br>Boulder, CO 80302</p>
-                  <a class="button-map" target="_blank" href="https://goo.gl/maps/dVtiMQmyFu9fkxHF6">Map</a>
+                  <p>TBD</p>
+                  <!-- <a class="button-map" target="_blank" href="https://goo.gl/maps/dVtiMQmyFu9fkxHF6">Map</a> -->
                 </div>
               </div>
             </div>
@@ -1069,13 +1068,26 @@
         <div class="col col-md-10">
           <h5 class="text-center">Registry</h5>
           <h2 class="text-center">Your presence is a gift</h2>
-          <p class="large">
+          <p class="large" style="text-align: center;">
             Having loving family and friends in our lives is the best gift of all. If you wish to honor us with a wedding gift, we have compiled some ideas <a href="https://www.blueprintregistry.com/registry/gia-michael-wedding-registry-8-20-2022" target="_blank">here</a>.
           </p>
         </div>
       </div>
     </div>
   </section>
+
+  <!-- <section id="kids" class="index-section index-registry">
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col col-md-10">
+          <h2 class="text-center">Kids</h2>
+          <p class="large" style="text-align: center;">
+            While we are not inviting any children (except those of family) to our wedding, if the possibility of not being able to bring your little ones may prevent you from attending, please let us know - we can figure out how to accommodate! The most important thing to us is to have you be able to come and celebrate with us.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section> -->
 
   <section id="rsvp" class="index-section index-rsvp">
 
@@ -1095,6 +1107,10 @@
 
         <div class="col col-md-7 col-lg-5" style="z-index:2;">
           <h2 class="text-center">RSVP</h2>
+          <h5><strong>kids</strong></h5>
+          <p>
+            While we are not inviting children (except family) to our wedding, please let us know if this makes it challenging for you to attend. We can figure out how to accommodate. The most important thing is having you there to celebrate with us!
+          </p>
 
           <form name="contact" method="POST" data-netlify="true">
             <p>
@@ -1132,7 +1148,7 @@
 
         </div>
 
-        
+
 
 
 
