--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">The main event. get gussied up (Colorado casual wedding style, that is - sundresses and cowboy boots are welcome, please leave the jorts at home this time) and join us at the orchard. The ceremony and festivities afterwards will all take place at the farm. Parking is very limited at the venue so we will be sharing information about a satellite parking area where we'll provide shuttles to the venue. We'll be sure to have several departure times so those who might need to duck out earlier are able.</p>
+                  <p class="sans">The main event. Get gussied up (Colorado casual wedding style, that is - sundresses and cowboy boots are welcome, please leave the jorts at home this time) and join us at the orchard. The ceremony and festivities afterwards will all take place at the farm. Parking is very limited at the venue so we will be sharing information about a satellite parking area where we'll provide shuttles to the venue. We'll be sure to have several departure times so those who might need to duck out earlier are able.</p>
                 </div>
               </div>
             </div>
