--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <link href="/stylesheets/addons.css" rel="stylesheet" />
     <link rel="shortcut icon" type="image/x-icon" sizes="16x16 32x32 48x48 64x64" href="/images/icon/ico.png">
     <!--[if IE]><link rel="shortcut icon" href="favicon.png"><![endif]-->
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRBMQ67QMP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SRBMQ67QMP');
+    </script>
 
   </head>
 
