--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
             <p>
               <div>
                 <h5>Leave a message for the bride & groom</h5>
-                <textarea rows="3" style="resize: vertical; width:100%; padding:.5em; font-size:1.5em; border:0px;"></textarea>
+                <textarea name="message" rows="3" style="resize: vertical; width:100%; padding:.5em; font-size:1.5em; border:0px;"></textarea>
               </div>
             </p>
             <p>
