update food choices, add brunch location/time, add wedding time

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="/stylesheets/addons.css" rel="stylesheet" />
     <link rel="shortcut icon" type="image/x-icon" sizes="16x16 32x32 48x48 64x64" href="/images/icon/ico.png">
     <!--[if IE]><link rel="shortcut icon" href="favicon.png"><![endif]-->
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRBMQ67QMP"></script>
     <script>
@@ -471,7 +471,7 @@
           <h5 class="text-center">Join Us in Colorado</h5>
           <h2 class="text-center">Wedding & Reception</h2>
           <p class="large text-center">
-            We're getting married at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin between 4 and 5 (exact time coming soon) followed by cocktails, dinner, and dancing. Be sure to don your party pants (and maybe ask if the babysitter can stay late) as we are hoping some of you will join us for some downtown Boulder after party antics on the Pearl St Mall.
+            We're getting married at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin at 4:30 followed by cocktails, dinner, and dancing. Be sure to don your party pants (and maybe ask if the babysitter can stay late) as we are hoping some of you will join us for some downtown Boulder after party antics on the Pearl St Mall.
           </p>
         </div>
       </div>
@@ -727,7 +727,7 @@
                   <h6>Time</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>TBD</p>
+                  <p>4:30pm</p>
                 </div>
               </div>
             </div>
@@ -796,7 +796,7 @@
                   <h6>Time</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>TBD</p>
+                  <p>9:30am to 1pm</p>
                 </div>
               </div>
             </div>
@@ -806,8 +806,8 @@
                   <h6>Where</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>TBD</p>
-                  <!-- <a class="button-map" target="_blank" href="https://goo.gl/maps/dVtiMQmyFu9fkxHF6">Map</a> -->
+                  <p>Our Backyard!<br>4775 McKinley Dr<br>Boulder, CO 80303</p>
+                  <a class="button-map" target="_blank" href="https://goo.gl/maps/Vgh9ZGWr2RASm95T6">Map</a></br>
                 </div>
               </div>
             </div>
@@ -817,7 +817,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">Wind down the weekend with the bride and groom over brunch on Sunday morning. Time and Place coming soon.</p>
+                  <p class="sans">Wind down the weekend with the bride and groom over brunch on Sunday morning.</p>
                 </div>
               </div>
             </div>
@@ -999,15 +999,15 @@
           <h4>Eat</h4>
           <ul>
             <li>
-              <a href="https://supermoonboulder.com/">Supermoon <span class="price">$$$</span></a>
-              <p>The best chicken wings in town - come for the food, stay for the party</p>
+              <a href="https://www.bastaboulder.com/">Basta <span class="price">$$$</span></a>
+              <p>One of our favorites, modern vibes with excellent Italian-inspired cuisine</p>
             </li>
             <li>
               <a href="https://www.mountainsunpub.com/location/southern-sun-pub-brewery/">Southern Sun <span class="price">$$</span></a>
-              <p>A Boulder classic </p>
+              <p>A Boulder classic</p>
             </li>
             <li>
-              <a href="https://boulder.avantifandb.com/">Avanti <span class="price">$$$</span></a>
+              <a href="https://boulder.avantifandb.com/">Avanti <span class="price">$$</span></a>
               <p>Drinks and bites with sweeping Boulder views</p>
             </li>
             <li>
@@ -1032,8 +1032,8 @@
               <p>Artfully crafted beers for all palates: lagers, sours, and IPAs alike</p>
             </li>
             <li>
-              <a href="https://therayback.com/">Rayback Collective <span class="price">$$</span></a>
-              <p>Sprawling outdoor cocktail and beer garden with several food truck options</p>
+              <a href="https://rosettahall.com/">Rosetta Hall <span class="price">$$</span></a>
+              <p>Some of the best views in town with a great selection of food choices and multiple bars to wet your whistle</p>
             </li>
             <li>
               <a href="https://jefeslongmont.com/">Jefe's (Longmont) <span class="price">$$</span></a>
