add hiking recs:

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
             </div>
           </div>
           <div class="col-12 col-md-9">
-            <h4>Wedding</h4>
+            <h4 id="wedding">Wedding</h4>
             <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
@@ -742,7 +742,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">The main event. Get gussied up (Colorado casual wedding style, that is - sundresses and cowboy boots are welcome, please leave the jorts at home this time) and join us at the orchard. The ceremony and festivities afterwards will all take place at the farm. Parking is very limited at the venue so we will be sharing information about a satellite parking area where we'll provide shuttles to the venue. We'll be sure to have several departure times so those who might need to duck out earlier are able.</p>
+                  <p class="sans">The main event. Get gussied up (Colorado casual wedding style, that is - sundresses and cowboy boots are welcome, please leave the jorts at home this time) and join us at the orchard. The ceremony and festivities afterwards will all take place at the farm.</p>
                 </div>
               </div>
             </div>
@@ -752,7 +752,7 @@
                   <h6>Shuttles</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">We have shuttles to transport guests to and from the wedding. The Boulder shuttles will pickup at the <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/xQmuNNJktrjtBRQ78">Boulder Justice Center parking lot</a>, and the Longmont shuttles will stop at both <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/tv6honQLNmgKJ4VP6">Holiday Inn Express</a> and <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/4LNoqsXY4v7yjugt5">Courtyard Marriot</a> in Longmont.</p>
+                  <p class="sans">We have shuttles to transport guests to and from the wedding. The Boulder shuttles will pickup at the <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/xQmuNNJktrjtBRQ78">Boulder Justice Center parking lot</a> (3:15 PM), and the Longmont shuttles will stop at both the <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/4LNoqsXY4v7yjugt5">Courtyard Marriot</a> (3:40 PM) and the <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/tv6honQLNmgKJ4VP6">Holiday Inn Express</a> (3:55 PM) in Longmont.</p>
                   <p class="sans">Please be respectful of our bus drivers and do not bring any alcohol onto the bus.</p>
                 </div>
               </div>
@@ -1065,8 +1065,8 @@
           <h4>Play</h4>
           <ul>
             <li>
-              <a href="https://bouldercolorado.gov/locations/chautauqua-park">Chautauqua Park <span class="price"></span></a>
-              <p>A historic public park with world-class rock climbing and miles of trails</p>
+              <a href="/hiking.pdf">Hiking Recommendations! <span class="price"></span></a>
+              <p>Browse a list of our favorite hikes</p>
             </li>
             <li>
               <a href="https://bouldercolorado.gov/locations/scott-carpenter-pool">Scott Carpenter Pool <span class="price"></span></a>
@@ -1101,19 +1101,6 @@
       </div>
     </div>
   </section>
-
-  <!-- <section id="kids" class="index-section index-registry">
-    <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col col-md-10">
-          <h2 class="text-center">Kids</h2>
-          <p class="large" style="text-align: center;">
-            While we are not inviting any children (except those of family) to our wedding, if the possibility of not being able to bring your little ones may prevent you from attending, please let us know - we can figure out how to accommodate! The most important thing to us is to have you be able to come and celebrate with us.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <section id="rsvp" class="index-section index-rsvp">
 
