add hiking recs:

--- a/index.html
+++ b/index.html
@@ -752,7 +752,16 @@
                   <h6>Shuttles</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">We have shuttles to transport guests to and from the wedding. The Boulder shuttles will pickup at the <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/xQmuNNJktrjtBRQ78">Boulder Justice Center parking lot</a> (3:15 PM), and the Longmont shuttles will stop at both the <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/4LNoqsXY4v7yjugt5">Courtyard Marriot</a> (3:40 PM) and the <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/tv6honQLNmgKJ4VP6">Holiday Inn Express</a> (3:55 PM) in Longmont.</p>
+                <p class="sans">We have shuttles (aka big yellow school buses) to transport guests to and from the wedding, please see the schedule below. All shuttles will return to their pickup location at the end of the evening.</p>
+                  <div class="shuttle-table">
+                    <h6 class="sans">
+                      <span><a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/xQmuNNJktrjtBRQ78">Boulder Justice Center</a></span> <span style="font-weight:200;float:right;">3:15 PM</span></br>
+                      <span><a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/4LNoqsXY4v7yjugt5">Courtyard Marriot, Longmont</a></span> <span style="font-weight:200;float:right;">3:40 PM</span></br>
+                      <span><a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/tv6honQLNmgKJ4VP6">Holiday Inn Express, Longmont</a></span> <span style="font-weight:200;float:right;">3:55 PM</span></br>
+                    </h6>
+                  </div>
+                  </br>
+                  </br>
                   <p class="sans">Please be respectful of our bus drivers and do not bring any alcohol onto the bus.</p>
                 </div>
               </div>
