--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 
 
     <!-- Saturday -->
-    <section class="index-events__day">
+    <section id="wedding" class="index-events__day">
       <header>
       </header>
       <div class="index-event">
@@ -714,7 +714,7 @@
             </div>
           </div>
           <div class="col-12 col-md-9">
-            <h4 id="wedding">Wedding</h4>
+            <h4>Wedding</h4>
             <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
